# rs-ccs811

./: Cargo.toml  README.md
examples/no-reset-restart/: main.rs
examples/printer/: main.rs
src/: lib.rs
src/ccs811/: algorithm_results_data.rs  co2.rs  error.rs  error_id.rs  mod.rs  status.rs  tvoc.rs
src/ccs_811/: co2.rs  error.rs  mod.rs  tvoc.rs
src/ccs_811/i2c/: error.rs  mod.rs
src/client/: mod.rs
src/client/unix/: mod.rs
src/client/unix/i2c/: error.rs  mod.rs
src/helpers/: mod.rs
