[package]
name = "ccs811"
version = "0.1.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.31"
log = "0.4.11"
i2cdev = { version = "0.4.4", optional = true }

[features]
std = ["i2cdev"]
