[package]
name = "ccs811"
version = "2.0.0"
authors = ["mmmpa <mmmpa.mmmpa@gmail.com>"]
edition = "2018"

[dependencies]
i2cdev = { version = "0.4.4", optional = true }
log = "0.4.14"
tokio = { version = "1.17.0", features = ["full"], optional = true }

[dev-dependencies]
pretty_env_logger = "0.4"

[features]
std = ["i2cdev"]
embedded = []
with_tokio = ["tokio"]
